--- a/taskeditor/taskeditor.glade
+++ b/taskeditor/taskeditor.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Thu Feb 19 11:51:57 2009 -->
+<!--Generated with glade3 3.4.5 on Fri Feb 27 14:30:40 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="TaskEditor">
     <property name="title" translatable="yes">Task</property>
@@ -19,7 +19,7 @@
               <widget class="GtkToolButton" id="mark_as_done_editor">
                 <property name="visible">True</property>
                 <property name="label" translatable="yes">Mark Done</property>
-                <property name="icon">task_done.png</property>
+                <property name="icon_name">gtg-task-done</property>
                 <signal name="clicked" handler="mark_as_done_clicked"/>
               </widget>
               <packing>
@@ -30,7 +30,7 @@
               <widget class="GtkToolButton" id="dismiss_editor">
                 <property name="visible">True</property>
                 <property name="label" translatable="yes">Dismiss</property>
-                <property name="icon">task_dismiss.png</property>
+                <property name="icon_name">gtg-task-dismiss</property>
                 <signal name="clicked" handler="on_dismiss"/>
               </widget>
               <packing>
