--- a/GTG/taskbrowser/taskbrowser.glade
+++ b/GTG/taskbrowser/taskbrowser.glade
@@ -153,7 +153,7 @@
                     <child>
                       <widget class="GtkImageMenuItem" id="new_subtask_mi">
                         <property name="visible">True</property>
-                        <property name="label">New _Subtask</property>
+                        <property name="label" translatable="yes">New _Subtask</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="on_add_subtask"/>
                         <child internal-child="image">
@@ -182,7 +182,7 @@
                     <child>
                       <widget class="GtkImageMenuItem" id="mark_done_mi">
                         <property name="visible">True</property>
-                        <property name="label">Mark as _Done</property>
+                        <property name="label" translatable="yes">Mark as _Done</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="on_mark_as_done"/>
                         <child internal-child="image">
@@ -197,7 +197,7 @@
                     <child>
                       <widget class="GtkImageMenuItem" id="task_dismiss">
                         <property name="visible">True</property>
-                        <property name="label">D_ismiss</property>
+                        <property name="label" translatable="yes">D_ismiss</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="on_dismiss_task"/>
                         <child internal-child="image">
@@ -833,7 +833,7 @@ Deleting a task cannot be undone.</property>
   </widget>
   <widget class="GtkAboutDialog" id="aboutdialog1">
     <property name="border_width">5</property>
-    <property name="title" translatable="yes">À propos de GTG!</property>
+    <property name="title" translatable="yes">About GTG!</property>
     <property name="resizable">False</property>
     <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
     <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
@@ -958,7 +958,7 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
     <child>
       <widget class="GtkImageMenuItem" id="ctcm_mark_as_not_done">
         <property name="visible">True</property>
-        <property name="label">Mark as Not Done</property>
+        <property name="label" translatable="yes">Mark as Not Done</property>
         <signal name="activate" handler="on_mark_as_done"/>
         <child internal-child="image">
           <widget class="GtkImage" id="menu-item-image8">
@@ -972,7 +972,7 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
     <child>
       <widget class="GtkImageMenuItem" id="ctcm_undismiss">
         <property name="visible">True</property>
-        <property name="label">Und_ismiss</property>
+        <property name="label" translatable="yes">Und_ismiss</property>
         <property name="use_underline">True</property>
         <signal name="activate" handler="on_dismiss_task"/>
         <child internal-child="image">
