--- a/GTG/taskeditor/taskeditor.glade
+++ b/GTG/taskeditor/taskeditor.glade
@@ -1,20 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Tue Mar 31 15:02:16 2009 -->
+<?xml version="1.0"?>
 <glade-interface>
+  <!-- interface-requires gtk+ 2.16 -->
+  <!-- interface-naming-policy toplevel-contextual -->
   <widget class="GtkWindow" id="TaskEditor">
     <property name="title" translatable="yes">Task</property>
-    <property name="window_position">GTK_WIN_POS_CENTER_ALWAYS</property>
+    <property name="window_position">center-always</property>
     <property name="default_width">316</property>
     <property name="default_height">321</property>
     <child>
       <widget class="GtkVBox" id="vbox4">
         <property name="visible">True</property>
-        <property name="extension_events">GDK_EXTENSION_EVENTS_CURSOR</property>
+        <property name="extension_events">cursor</property>
         <child>
           <widget class="GtkToolbar" id="task_tb1">
             <property name="visible">True</property>
-            <property name="toolbar_style">GTK_TOOLBAR_BOTH</property>
             <child>
               <widget class="GtkToolButton" id="mark_as_done_editor">
                 <property name="visible">True</property>
@@ -23,6 +22,7 @@
                 <signal name="clicked" handler="mark_as_done_clicked"/>
               </widget>
               <packing>
+                <property name="expand">False</property>
                 <property name="homogeneous">True</property>
               </packing>
             </child>
@@ -34,6 +34,7 @@
                 <signal name="clicked" handler="on_dismiss"/>
               </widget>
               <packing>
+                <property name="expand">False</property>
                 <property name="homogeneous">True</property>
               </packing>
             </child>
@@ -45,6 +46,7 @@
                 <signal name="clicked" handler="delete_clicked"/>
               </widget>
               <packing>
+                <property name="expand">False</property>
                 <property name="homogeneous">True</property>
               </packing>
             </child>
@@ -53,6 +55,7 @@
                 <property name="visible">True</property>
               </widget>
               <packing>
+                <property name="expand">False</property>
                 <property name="homogeneous">True</property>
               </packing>
             </child>
@@ -64,6 +67,7 @@
                 <signal name="clicked" handler="on_insert_subtask_clicked"/>
               </widget>
               <packing>
+                <property name="expand">False</property>
                 <property name="homogeneous">True</property>
               </packing>
             </child>
@@ -72,11 +76,12 @@
                 <property name="visible">True</property>
                 <property name="label" translatable="yes">Insert tag</property>
                 <property name="icon_name">gtg-tag-new</property>
-                <signal name="show_menu" handler="on_inserttag_show_menu"/>
-                <signal name="show_menu" handler="on_inserttag_show_menu"/>
                 <signal name="clicked" handler="on_inserttag_clicked"/>
+                <signal name="show_menu" handler="on_inserttag_show_menu"/>
+                <signal name="show_menu" handler="on_inserttag_show_menu"/>
               </widget>
               <packing>
+                <property name="expand">False</property>
                 <property name="homogeneous">True</property>
               </packing>
             </child>
@@ -85,6 +90,7 @@
                 <property name="visible">True</property>
               </widget>
               <packing>
+                <property name="expand">False</property>
                 <property name="homogeneous">True</property>
               </packing>
             </child>
@@ -96,6 +102,7 @@
                 <signal name="clicked" handler="on_keepnote_clicked"/>
               </widget>
               <packing>
+                <property name="expand">False</property>
                 <property name="homogeneous">True</property>
               </packing>
             </child>
@@ -114,20 +121,23 @@
                 <property name="height_request">300</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-                <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                <property name="hscrollbar_policy">automatic</property>
+                <property name="vscrollbar_policy">automatic</property>
                 <child>
                   <widget class="GtkTextView" id="textview">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="has_focus">True</property>
-                    <property name="resize_mode">GTK_RESIZE_IMMEDIATE</property>
-                    <property name="wrap_mode">GTK_WRAP_WORD</property>
+                    <property name="resize_mode">immediate</property>
+                    <property name="wrap_mode">word</property>
                     <property name="left_margin">5</property>
                     <property name="right_margin">5</property>
                   </widget>
                 </child>
               </widget>
+              <packing>
+                <property name="position">0</property>
+              </packing>
             </child>
             <child>
               <widget class="GtkVSeparator" id="vseparator1">
@@ -152,6 +162,7 @@
                   <packing>
                     <property name="expand">False</property>
                     <property name="padding">10</property>
+                    <property name="position">0</property>
                   </packing>
                 </child>
                 <child>
@@ -167,6 +178,7 @@
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">False</property>
+                        <property name="position">0</property>
                       </packing>
                     </child>
                     <child>
@@ -174,12 +186,11 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
-                        <property name="response_id">0</property>
                         <signal name="clicked" handler="on_startdate_pressed"/>
                         <child>
                           <widget class="GtkArrow" id="arrow2">
                             <property name="visible">True</property>
-                            <property name="arrow_type">GTK_ARROW_DOWN</property>
+                            <property name="arrow_type">down</property>
                           </widget>
                         </child>
                       </widget>
@@ -220,6 +231,7 @@
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">False</property>
+                        <property name="position">0</property>
                       </packing>
                     </child>
                     <child>
@@ -227,12 +239,11 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
-                        <property name="response_id">0</property>
                         <signal name="clicked" handler="on_duedate_pressed"/>
                         <child>
                           <widget class="GtkArrow" id="arrow1">
                             <property name="visible">True</property>
-                            <property name="arrow_type">GTK_ARROW_DOWN</property>
+                            <property name="arrow_type">down</property>
                           </widget>
                         </child>
                       </widget>
@@ -252,7 +263,7 @@
                     <property name="visible">True</property>
                     <property name="xalign">1</property>
                     <property name="use_markup">True</property>
-                    <property name="justify">GTK_JUSTIFY_RIGHT</property>
+                    <property name="justify">right</property>
                     <property name="width_chars">0</property>
                   </widget>
                   <packing>
@@ -285,22 +296,26 @@
           <widget class="GtkHButtonBox" id="hbuttonbox1">
             <property name="visible">True</property>
             <property name="border_width">3</property>
-            <property name="layout_style">GTK_BUTTONBOX_END</property>
+            <property name="layout_style">end</property>
             <child>
               <widget class="GtkButton" id="close_btn">
+                <property name="label" translatable="yes">gtk-close</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="label" translatable="yes">gtk-close</property>
                 <property name="use_stock">True</property>
-                <property name="response_id">0</property>
                 <signal name="clicked" handler="close_clicked"/>
               </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">0</property>
+              </packing>
             </child>
           </widget>
           <packing>
             <property name="expand">False</property>
-            <property name="pack_type">GTK_PACK_END</property>
+            <property name="pack_type">end</property>
             <property name="position">3</property>
           </packing>
         </child>
@@ -309,11 +324,11 @@
   </widget>
   <widget class="GtkWindow" id="calendar">
     <property name="events">GDK_STRUCTURE_MASK | GDK_PROXIMITY_OUT_MASK</property>
-    <property name="type">GTK_WINDOW_POPUP</property>
+    <property name="type">popup</property>
     <property name="resizable">False</property>
     <property name="modal">True</property>
     <property name="destroy_with_parent">True</property>
-    <property name="type_hint">GDK_WINDOW_TYPE_HINT_DROPDOWN_MENU</property>
+    <property name="type_hint">dropdown-menu</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="skip_pager_hint">True</property>
     <property name="transient_for">TaskEditor</property>
@@ -328,15 +343,17 @@
             <signal name="day_selected_double_click" handler="on_dayselected_double"/>
             <signal name="day_selected" handler="on_dayselected"/>
           </widget>
+          <packing>
+            <property name="position">0</property>
+          </packing>
         </child>
         <child>
           <widget class="GtkButton" id="button2">
+            <property name="label" translatable="yes">gtk-clear</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
-            <property name="label" translatable="yes">gtk-clear</property>
             <property name="use_stock">True</property>
-            <property name="response_id">0</property>
             <signal name="released" handler="on_nodate"/>
           </widget>
           <packing>
